<resources>
    <string name="app_name">DropByDroneApp</string>
    <string name="headline">DropByDrone</string>
    <string name="button_send">Send</string>
    <string name="button_scan">Scan</string>
    <string name="button_accept">Accept</string>
    <string name="button_receive">Receive</string>
    <string name="text_infoID">ID</string>
    <string name="text_infoText">Text</string>
    <string name="text_infoInfo">Info</string>
    <string name="text_infoINFO">Info</string>
    <string name="button_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
